--- a/package.json
+++ b/package.json
@@ -9,11 +9,16 @@
     "start": "react-native start",
     "test": "jest",
     "uninstall": "adb uninstall com.uber",
-    "clean":"cd android && ./gradlew clean && cd .."
+    "clean": "cd android && ./gradlew clean && cd .."
   },
   "dependencies": {
+    "@emotion/native": "^11.11.0",
+    "@emotion/react": "^11.11.4",
+    "expo": "^49.0.0",
+    "expo-location": "~16.1.0",
     "react": "18.2.0",
-    "react-native": "0.72.12"
+    "react-native": "0.72.12",
+    "react-native-maps": "^1.13.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
@@ -24,8 +29,13 @@
     "@tsconfig/react-native": "^3.0.0",
     "@types/react": "^18.0.24",
     "@types/react-test-renderer": "^18.0.0",
+    "@typescript-eslint/eslint-plugin": "^7.5.0",
+    "@typescript-eslint/parser": "^7.5.0",
     "babel-jest": "^29.2.1",
+    "babel-plugin-module-resolver": "^5.0.0",
     "eslint": "^8.19.0",
+    "eslint-import-resolver-typescript": "^3.6.1",
+    "eslint-plugin-import": "^2.29.1",
     "jest": "^29.2.1",
     "metro-react-native-babel-preset": "^0.76.9",
     "prettier": "^2.4.1",
