--- a/package.json
+++ b/package.json
@@ -18,7 +18,10 @@
     "expo-location": "~16.1.0",
     "react": "18.2.0",
     "react-native": "0.72.12",
-    "react-native-maps": "^1.13.0"
+    "react-native-maps": "^1.13.0",
+    "react-native-safe-area-context": "^4.9.0",
+    "react-native-size-matters": "^0.4.2",
+    "react-native-vector-icons": "^10.0.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
@@ -27,7 +30,9 @@
     "@react-native/eslint-config": "^0.72.2",
     "@react-native/metro-config": "^0.72.12",
     "@tsconfig/react-native": "^3.0.0",
+    "@types/jest": "^29.5.12",
     "@types/react": "^18.0.24",
+    "@types/react-native": "^0.73.0",
     "@types/react-test-renderer": "^18.0.0",
     "@typescript-eslint/eslint-plugin": "^7.5.0",
     "@typescript-eslint/parser": "^7.5.0",
