--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,6 @@
       "@components/*": ["src/components/*"],
       "@screens/*": ["src/screens/*"]
     },
-    "typeRoots": ["src/types"]
+    "typeRoots": ["src/types","node_modules/@types"]
   }
 }
