--- a/package.json
+++ b/package.json
@@ -14,14 +14,22 @@
   "dependencies": {
     "@emotion/native": "^11.11.0",
     "@emotion/react": "^11.11.4",
+    "@gorhom/bottom-sheet": "^4.6.1",
+    "@react-native-async-storage/async-storage": "^1.23.1",
+    "axios": "^1.6.8",
+    "dayjs": "^1.11.10",
     "expo": "^49.0.0",
     "expo-location": "~16.1.0",
     "react": "18.2.0",
     "react-native": "0.72.12",
+    "react-native-gesture-handler": "^2.16.0",
     "react-native-maps": "^1.13.0",
+    "react-native-maps-directions": "^1.9.0",
+    "react-native-reanimated": "^3.8.1",
     "react-native-safe-area-context": "^4.9.0",
     "react-native-size-matters": "^0.4.2",
-    "react-native-vector-icons": "^10.0.3"
+    "react-native-vector-icons": "^10.0.3",
+    "use-debounce": "^10.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
@@ -33,6 +41,7 @@
     "@types/jest": "^29.5.12",
     "@types/react": "^18.0.24",
     "@types/react-native": "^0.73.0",
+    "@types/react-native-vector-icons": "^6.4.18",
     "@types/react-test-renderer": "^18.0.0",
     "@typescript-eslint/eslint-plugin": "^7.5.0",
     "@typescript-eslint/parser": "^7.5.0",
@@ -44,6 +53,7 @@
     "jest": "^29.2.1",
     "metro-react-native-babel-preset": "^0.76.9",
     "prettier": "^2.4.1",
+    "react-native-dotenv": "^3.4.11",
     "react-test-renderer": "18.2.0",
     "typescript": "4.8.4"
   },
